--- a/index.css
+++ b/index.css
@@ -44,30 +44,32 @@ background: #000;
     display: flex;
     flex-direction: column;
     border-bottom: 3px solid rgb(67, 67, 170);
-    width: 23%;
+    width: 18%;
     height: 100%;
     margin-right: 1px;
+    background-color: rgb(17, 16, 16);
 }
 
 .nav-bar {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
     background-color: rgb(17, 16, 16);
-    height: 20%;
+    height: 14%;
     color: white;
 }
 
 .navbar-button {
     display: flex;
     align-items: center;
-    padding: 5px;
+    /* padding: 5px; */
     cursor: pointer;
-    background-color: rgb(17, 16, 16);
+    /* background-color: rgb(17, 16, 16); */
+    /* background-color: white; */
     border-radius: 3px; 
     color: white;
     font-size: 17px;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .iconspacing {
@@ -78,7 +80,8 @@ background: #000;
 .playlist {
     display: flex;
     flex-direction: column;
-    height: 80%;
+    margin-top: 10px;
+    /* height: 85%; */
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
@@ -133,7 +136,7 @@ background: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 54%;
+    width: 64%;
     height: 100%;
     z-index: 3;
     border-bottom: 3px solid rgb(67, 67, 170);
@@ -251,7 +254,7 @@ background: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 23%;
+    width: 18%;
     height: 100%;
     position: relative;
     margin: auto 1px;
@@ -263,24 +266,29 @@ background: #000;
 .now-playing-info {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    height: 16%;
+    height: 14%;
     width: 100%;
-    background-color: rgb(17, 16, 16);
+    /* background-color: rgb(17, 16, 16); */
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     font-family: 'Kalam', cursive;
-    font-size: 25px;
+    font-size: 1.3rem;
 }
 
 .playing-song-display {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 71%; 
+    justify-content: center;
+    width: 98%;
+    height: 55%; 
     background-color: rgb(17, 16, 16);
+    margin-top: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-top: 10px;
 } 
 
 .playing-song-display img {
