--- a/index.css
+++ b/index.css
@@ -469,6 +469,7 @@ font-family: 'Kalam', cursive;
 #myProgressBar{
     /* display: flex; */
     width: 100%;
+    /* margin: auto 2%; */
     cursor: pointer;
 }
 
@@ -479,20 +480,18 @@ font-family: 'Kalam', cursive;
 
 #timerstart {
     font-size: 12px;
-    width: 5%;
+    width: 10%;
     margin: 1%;
     color: rgb(246, 231, 231);
-    border-end-end-radius: 4px;
-    border-start-end-radius: 4px;
+    /* background-color: green; */
 }
 
 #timerend {
     font-size: 12px;
     margin: 1%;
-    width: 5%;
+    width: 10%;
     color: rgb(246, 231, 231);
-    border-end-end-radius: 4px;
-    border-start-end-radius: 4px;
+    /* background-color: green; */
 }
 
 
