--- a/index.css
+++ b/index.css
@@ -74,7 +74,7 @@ background: #000;
     /* border-top-left-radius:10px; */
     border-radius: 7px;
     color: white;
-    font-size: 17px;
+    font-size: 0.9rem;
     /* height: 100%; */
 }
 
@@ -95,7 +95,7 @@ background: #000;
 .playlist {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 10%;
     /* height: 85%; */
     overflow-y: auto;
     border-radius: 5px;
@@ -124,13 +124,13 @@ background: #000;
 }
 
 .liked {
-    margin: 2px auto;
+    margin: 1% auto;
     padding-left: 20px;
     background-color: rgb(56, 55, 55);
     border-radius: 5px;
-    height: 50px;
+    height: 35px;
     text-align: center;
-    font-size: 16px;
+    font-size: 0.9rem;
     cursor: pointer;
     width: 100%;
     /* transition: 0.15s; */
@@ -318,7 +318,7 @@ font-family: 'Kalam', cursive;
     width: 98%;
     height: 55%; 
     background-color: rgb(17, 16, 16);
-    margin-top: 10px;
+    margin-top: 10%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     padding-top: 10px;
@@ -377,6 +377,7 @@ font-family: 'Kalam', cursive;
     color: white;
     display: flex;
     justify-content: center;
+    /* text-align: center; */
     align-items: center;
     flex-direction: column; 
 }
@@ -419,11 +420,11 @@ font-family: 'Kalam', cursive;
 .controls .fas {
     cursor: pointer;
     margin: auto 9px;
-    font-size: 35px;
+    font-size: 1.6rem;
 }
 
 .controls .smallicon {
-    font-size: 20px;
+    font-size: 0.8rem;
     margin: auto 1%;
 }
 
@@ -461,7 +462,7 @@ font-family: 'Kalam', cursive;
     flex-direction: row;
     align-items: center;
     width: 45vw;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     bottom: 0;
     background-color: transparent;
 }
