--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     font-family: 'Montserrat', sans-serif;
     background-color: black;
     color: white;
-    font-size: 18px;
+    font-size: 0.95rem;
 }
 
 
@@ -74,7 +74,7 @@ background: #000;
     /* border-top-left-radius:10px; */
     border-radius: 7px;
     color: white;
-    font-size: 0.9rem;
+    /* font-size: 0.9rem; */
     /* height: 100%; */
 }
 
@@ -97,6 +97,7 @@ background: #000;
     flex-direction: column;
     margin-top: 10%;
     /* height: 85%; */
+    
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
@@ -125,7 +126,7 @@ background: #000;
 
 .liked {
     margin: 1% auto;
-    padding-left: 20px;
+    padding-left: 5%;
     background-color: rgb(56, 55, 55);
     border-radius: 5px;
     height: 35px;
@@ -240,17 +241,26 @@ font-family: 'Kalam', cursive;
     /* color: rgb(124, 170, 106); */
 }
 
-.h-100 i {
-    /* width: 100%; */
-    position: absolute;
-    background-color: transparent;
-    text-align: center;
-    /* right: 0; */
-    cursor: pointer;
-    font-size: 2.5rem;
-    /* color: rgb(103, 255, 43); */
-    color: rgb(255, 255, 255);
+
+.masterPlayCover {
+       /* width: 100%; */
+       position: absolute;
+       background-color: transparent;
+       text-align: center;
+       /* right: 0; */
+       cursor: pointer;
+       font-size: 2.5rem;
+       /* color: rgb(103, 255, 43); */
+       color: rgb(255, 255, 255);
+       /* visibility: hidden; */
+}
+
+.playVisible {
     visibility: hidden;
+}
+
+.colorRed {
+    color: rgb(255, 0, 0);
 }
 
 .card-img-top {
@@ -273,8 +283,8 @@ font-family: 'Kalam', cursive;
 .duration {
     /* width: 100%; */
     padding: 3%;
-    font-size: 12px;
-    font-weight: 520;
+    font-size: 0.60rem;
+    /* font-weight:bold; */
     background-color: rgb(67, 67, 170);
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
@@ -385,10 +395,12 @@ font-family: 'Kalam', cursive;
 .footersong {
     display: flex;
     align-items: center;
+    justify-content: center;
     position: absolute;
     left: 0;
     margin: auto 1%;
     height: 90%;
+    /* width: 15vw; */
 }
 
 .footersong img {
@@ -400,13 +412,18 @@ font-family: 'Kalam', cursive;
 
 .footersongname {
     margin: 5px;
-    font-size: 15px;
+    /* background-color: green; */
+}
+
+#masterSongName {
+    font-size: 0.8rem;
 }
 
 .footcovericon {
     margin: 5px;
-    font-size: 15px;
+    font-size: 0.8rem;
     cursor: pointer;
+    /* background-color: green; */
 }
 
 .controls {
@@ -464,35 +481,35 @@ font-family: 'Kalam', cursive;
     width: 45vw;
     /* border-radius: 4px; */
     bottom: 0;
-    background-color: transparent;
+    /* background-color: transparent; */
+    /* background-color: green; */
 }
 
 #myProgressBar{
     /* display: flex; */
-    width: 100%;
+    width: 84%;
     /* margin: auto 2%; */
     cursor: pointer;
-}
-
-.progressBar {
     accent-color: rgb(67, 67, 170);
-    height: 2px;
+    height: 1px;
 }
 
 #timerstart {
-    font-size: 12px;
-    width: 10%;
-    margin: 1%;
+    font-size: 0.65rem;
+    width: 7%;
+    position: relative;
+    text-align: end;
+    margin-right: 1%;
     color: rgb(246, 231, 231);
-    /* background-color: green; */
+    /* background-color: blue; */
 }
 
 #timerend {
-    font-size: 12px;
-    margin: 1%;
-    width: 10%;
+    font-size: 0.65rem;
+    margin-left: 1%;
+    width: 7%;
     color: rgb(246, 231, 231);
-    /* background-color: green; */
+    /* background-color: blue; */
 }
 
 
