--- a/index.css
+++ b/index.css
@@ -57,13 +57,13 @@ background: #000;
     /* justify-content: center; */
     flex-direction: column;
     /* background-color: rgb(17, 16, 16); */
-    height: 14%;
+    height: 20%;
     color: white;
     border-radius: 7px;
- 
 }
 
 .navbar-button {
+    position: relative;
     display: flex;
     align-items: center;
     /* padding: 5px; */
@@ -75,20 +75,67 @@ background: #000;
     border-radius: 7px;
     color: white;
     /* font-size: 0.9rem; */
-    /* height: 100%; */
+    height: 50%;
+    /* background-color: green; */
+    /* transition: 0.15s; */
+    /* width: 740px; */
 }
+
+.backgroundpurple {
+    background-color: rgb(67, 67, 170);
+}
+
+#search {
+    background-color: rgb(67, 67, 170);
+    color: white;
+    height: 90%;
+    border-radius: 0.5rem;
+    font-size: 0.85rem;
+    padding-left: 1.5rem;
+}
+
+.searchiconclicked {
+    background-color: rgb(67, 67, 170);
+}
+
+.hidesearchbar {
+    position: fixed;
+    z-index: -2;
+}
+
+.hidesearchspan {
+    position: fixed;
+    z-index: -2;
+}
+
+.searchbariconright {
+    position: absolute;
+    right: 0;
+    /* transition: 0.50s; */
+    cursor: pointer;
+    /* background-color: rgb(67, 67, 170); */
+}
+
 
 .navbar-button:hover {
     background-color: rgb(67, 67, 170);
 }
 
+.navbar-button:focus {
+    background-color: rgb(67, 67, 170);
+}
 .navbar-button:hover i{
     background-color: rgb(67, 67, 170);
     color: rgb(255, 255, 255);
 }
 
+.navbar-button:hover span {
+    background-color: rgb(67, 67, 170);
+}
+
 .iconspacing {
     margin: 5%;
+    margin-right: 9%;
     /* background-color: rgb(17, 16, 16); */
 }
 
@@ -120,6 +167,7 @@ background: #000;
 .iconright {
     position: absolute;
     right: 0;
+    margin-right: 15%;
     cursor: pointer;
     background-color: #000;
 }
