Changed font size

--- a/index.css
+++ b/index.css
@@ -486,6 +486,7 @@ font-family: 'Kalam', cursive;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 0.3%;
 }
 
 .controls .fas {
@@ -495,7 +496,7 @@ font-family: 'Kalam', cursive;
 }
 
 .controls .smallicon {
-    font-size: 0.8rem;
+    font-size: 1rem;
     margin: auto 1%;
 }
 
@@ -566,4 +567,8 @@ font-family: 'Kalam', cursive;
     /* background-color: blue; */
 }
 
+#masterPlay {
+    font-size: 2.2rem;
+    /* margin-bottom: 1%; */
+}
 
