--- a/index.css
+++ b/index.css
@@ -161,6 +161,15 @@ background: #000;
     align-items: center;
     color: white;
     width: 100%;
+    margin-bottom: 3%;
+}
+
+.libraries {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    width: 100%;
 }
 
 .create {
@@ -181,10 +190,15 @@ background: #000;
 .liked {
     margin: 1% auto;
     padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     background-color: rgb(56, 55, 55);
     border-radius: 5px;
-    height: 35px;
-    text-align: center;
+    /* height: 50px; */
+    
+    /* text-align: center;
+    justify-content: center;
+    align-items: center; */
     font-size: 0.9rem;
     cursor: pointer;
     width: 100%;
@@ -195,13 +209,14 @@ background: #000;
     background-color: rgb(67, 67, 170);
     /* font-family: 'Montserrat', serif; */
     font-weight: 520;
-    text-align: center;
+    /* text-align: center; */
     align-items: center;
     justify-content: center;
-    padding: 0;
+    /* padding-left: 0; */
 font-family: 'Kalam', cursive;
 /* transform: scale(1.02); */
     transition: 0.15s;
+    font-size: 1.15rem;
 /* font-family: 'Lobster', cursive;  */
 }
 
@@ -572,3 +587,54 @@ font-family: 'Kalam', cursive;
     /* margin-bottom: 1%; */
 }
 
+#alertBox {
+	position: absolute;
+	top: 20%;
+	/* bottom: 60%; */
+	left: 3%; 
+	width: 15%;
+    /* justify-content: center;
+    align-items: center;
+    text-align: center; */
+    /* display: flex; */
+	/* height: 15%; */
+	background-color: white;
+    background-color: rgb(13, 13, 13);
+	border-radius: 10px;
+	padding: 0.5rem;
+	z-index: 4;
+
+	text-align: center;
+	color: black;
+}
+
+#alertClose {
+	position: absolute;
+	right: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, .5);
+	width: 100%;
+	height: 100%;
+}
+
+.inputClassName {
+    /* color: white; */
+    /* background-color: #000; */
+    background-color: white;
+    color: black;
+    /* padding-left: 5%; */
+    text-align: center;
+    width: 100%;
+    margin-top: 2%;
+    border-radius: 0.3rem;
+    font-weight: bolder;
+}
+
+.textMsgName {
+    background-color: rgb(17, 16, 16);
+    background-color: rgb(67, 67, 170);
+    font-size: 0.9rem;
+    border-radius: 0.5rem;
+    font-family: 'Marcellus', serif;
+    padding: 1%;
+}
