--- a/index.css
+++ b/index.css
@@ -616,6 +616,14 @@ font-family: 'Kalam', cursive;
 	height: 100%;
 }
 
+.inputDivClass {
+    background-color: rgb(17, 16, 16);
+    /* display: flex; */
+    justify-content: center;
+    /* align-items: center; */
+    /* text-align: center; */
+}
+
 .inputClassName {
     /* color: white; */
     /* background-color: #000; */
@@ -623,10 +631,11 @@ font-family: 'Kalam', cursive;
     color: black;
     /* padding-left: 5%; */
     text-align: center;
-    width: 100%;
-    margin-top: 2%;
+    width: 90%;
+    margin-top: 5%;
     border-radius: 0.3rem;
     font-weight: bolder;
+    margin-right: 2%;
 }
 
 .textMsgName {
@@ -636,4 +645,50 @@ font-family: 'Kalam', cursive;
     border-radius: 0.5rem;
     font-family: 'Marcellus', serif;
     padding: 1%;
+}
+
+.closeButtonDiv {
+    width: 100%;
+    /* background-color: white; */
+    background-color: rgb(17, 16, 16);
+    /* height: 100%; */
+    /* display: flex; */
+    /* position: relative; */
+    /* height: 50%; */
+    /* background-color: white; */
+    /* color: aqua; */
+    text-align: end;
+    padding-right: 1%;
+}
+
+#closeButton {
+    /* position: absolute; */
+    /* right: 0; */
+    cursor: pointer;
+    color: rgb(67, 67, 170);
+    background-color: rgb(17, 16, 16);
+}
+
+#closeButton:hover {
+    color: red;
+}
+
+#acceptName {
+    background-color: transparent;
+    /* color: green; */
+    color: rgb(67, 67, 170);
+    cursor: pointer;
+    /* position: absolute; */
+    right: 0;
+    /* height: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center; */
+    /* padding-right: 10%; */
+    font-size: 1.9rem;
+    margin-top: 5%;
+}
+
+#acceptName:hover {
+    color: rgb(30, 241, 30);
 }
