--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ background: #000;
     display:flex;
     margin: auto;
     background-color: rgb(17, 16, 16);
+    /* position: relative; */
 }
 
 /* ********FIRST SECTION************* */
@@ -83,6 +84,7 @@ background: #000;
 
 #searchbar {
     border-bottom-right-radius: 10px;
+    border: none;
 }
 
 .backgroundpurple {
@@ -94,9 +96,10 @@ background: #000;
     /* background-color: white; */
     color: white;
     height: 90%;
-    border-radius: 0.5rem;
+    /* border-radius: 0.5rem; */
     font-size: 0.85rem;
     padding-left: 1.5rem;
+    border: none;
 }
 
 .searchiconclicked {
@@ -587,64 +590,111 @@ font-family: 'Kalam', cursive;
     /* margin-bottom: 1%; */
 }
 
+#alertBoxDiv {
+    z-index: 4;
+    /* height: 50%;
+    width: 50%; */
+    margin: auto;
+    background-color: green;
+    /* position: absolute; */
+    /* top: 0; */
+    justify-content: center;
+    align-items: center;
+    /* display: flex; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    
+}
+
 #alertBox {
-	position: absolute;
-	top: 20%;
+	/* position: absolute; */
+	/* top: 20%; */
 	/* bottom: 60%; */
-	left: 3%; 
-	width: 15%;
+	left: 50%; 
+    top: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+	/* width: 15%; */
+    /* height: 20%; */
     /* justify-content: center;
     align-items: center;
     text-align: center; */
     /* display: flex; */
 	/* height: 15%; */
 	background-color: white;
-    background-color: rgb(13, 13, 13);
+    background-color: grey;
+    background-color: rgb(140, 0, 255);
+    background-color: rgb(67, 67, 170);
 	border-radius: 10px;
-	padding: 0.5rem;
+	padding: 1rem;
 	z-index: 4;
-	text-align: center;
+	/* text-align: center; */
 	color: black;
+    transition: 0.15s;
+    /* display: flex;
+    flex-direction: column; */
+    /* width: 100%; */
+    /* height: 100%; */
+    width: 30%;
+    /* height: 10%; */
+    border: 2px solid rgb(30, 241, 30);
+    /* padding-bottom: 2%; */
 }
 
 #alertClose {
 	position: absolute;
+    /* display: flex; */
 	right: 0;
 	top: 0;
-	background-color: rgba(0, 0, 0, .5);
-	width: 100%;
-	height: 100%;
+	background-color: rgba(0, 0, 0, .8);
+	width: 100vw;
+	height: 100vh;
+    z-index: 3;
 }
 
 .inputDivClass {
-    background-color: rgb(17, 16, 16);
+    /* background-color: rgb(17, 16, 16); */
+    background-color: grey;
+    background-color: rgb(140, 0, 255);
+    background-color: rgb(67, 67, 170);
     /* display: flex; */
     justify-content: center;
     /* align-items: center; */
     /* text-align: center; */
+    position: relative;
+    border: none;
+    margin: 2% auto;
 }
 
 .inputClassName {
+    padding-left: 5%;
+    font-family: 'Marcellus', serif;
     /* color: white; */
     /* background-color: #000; */
     background-color: white;
     color: black;
     /* padding-left: 5%; */
-    text-align: center;
-    width: 90%;
-    margin-top: 5%;
-    border-radius: 0.3rem;
+    /* text-align: center; */
+    width: 100%;
+    /* margin-top: 1%; */
+    border-radius: 0.4rem;
     font-weight: bolder;
-    margin-right: 2%;
+    /* margin-right: 2%; */
+    height: 2.3rem;
+    border: 1px solid rgb(30, 241, 30);
 }
 
 .textMsgName {
     background-color: rgb(17, 16, 16);
-    background-color: rgb(67, 67, 170);
+    /* background-color: rgb(67, 67, 170); */
+    background-color: transparent;
     font-size: 0.9rem;
-    border-radius: 0.5rem;
+    border-radius: 0.2rem;
     font-family: 'Marcellus', serif;
     padding: 1%;
+    /* height: 2rem; */
 }
 
 .closeButtonDiv {
@@ -675,20 +725,47 @@ font-family: 'Kalam', cursive;
 
 #acceptName {
     background-color: transparent;
+    background-color: rgb(30, 241, 30);
+    background-color: rgb(67, 67, 170);
+    /* color: rgb(30, 241, 30); */
     /* color: green; */
-    color: rgb(67, 67, 170);
+    /* color: rgb(67, 67, 170); */
+    /* color: #000; */
+    /* color: white;  */
     cursor: pointer;
-    /* position: absolute; */
+    position: absolute;
     right: 0;
+    bottom: 0;
     /* height: 100%;
     text-align: center;
     align-items: center;
     justify-content: center; */
     /* padding-right: 10%; */
-    font-size: 1.9rem;
-    margin-top: 5%;
+    font-size: 1.1rem;
+    /* margin: 3% auto; */
+    text-align: center;
+    /* width: 25%; */
+    padding: 1%;
+    border-radius: 0.4rem;
+    width: 15%;
+    /* position: absolute; */
+    /* background-color: #000; */
+    height: 2.28rem;
+    /* justify-content: center;
+    text-align: center;
+    align-items: center; */
+    /* margin-top: 0.1rem; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgb(30, 241, 30);
+    /* padding: 10%; */
 }
 
 #acceptName:hover {
-    color: rgb(30, 241, 30);
+    /* color: rgb(30, 241, 30); */
+    /* color: rgb(67, 67, 170); */
+    color: white;
+    background-color: rgb(30, 241, 30);
 }
+
