--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@
 
 i:hover {
     color: rgb(67, 67, 170);
+    color: antiquewhite;
+    color: white;
+    color: red;
 }
 
 ::-webkit-scrollbar {
@@ -47,6 +50,8 @@ background: #000;
     display: flex;
     flex-direction: column;
     border-bottom: 3px solid rgb(67, 67, 170);
+    border-bottom: 3px solid antiquewhite;
+    border-bottom: 3px solid white;
     width: 18%;
     height: 100%;
     margin-right: 1px;
@@ -67,6 +72,7 @@ background: #000;
     position: relative;
     display: flex;
     align-items: center;
+    /* justify-content: center; */
     cursor: pointer;
     /* border-radius: 7px; */
     /* border-bottom-left-radius: 3px; */
@@ -75,20 +81,31 @@ background: #000;
     height: 50%;
     /* margin: 2% 0; */
     /* margin-bottom: 1%; */
+    /* transition: 0.15s; */
+    /* background-color: transparent; */
 }
 
 #homebutton {
     border-top-right-radius: 10px;
+    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
+    /* font-weight: bold; */
     /* background-color: green; */
+    /* font-family: 'Varela', sans-serif; */
+    /* font-family: 'Roboto Slab', serif; */
+    /* font-family: 'Preahvihear', sans-serif; */
+    /* font-family: 'Montserrat', sans-serif; */
+    /* font-family: 'Kalam', sans-serif; */
 }
 
 #searchbar {
     border-bottom-right-radius: 10px;
     border: none;
+    /* color: black; */
 }
 
 .backgroundpurple {
     background-color: rgb(67, 67, 170);
+    background-color: antiquewhite;
 }
 
 #search {
@@ -100,10 +117,18 @@ background: #000;
     font-size: 0.85rem;
     padding-left: 1.5rem;
     border: none;
+    background-color: antiquewhite;
+    background-color: white;
+    color: black;
+    font-weight: bolder;
+    font-family: 'Marcellus', serif;
 }
 
 .searchiconclicked {
     background-color: rgb(67, 67, 170);
+    background-color: antiquewhite;
+    background-color: white;
+    color: black;
 }
 
 .hidesearchbar {
@@ -127,30 +152,42 @@ background: #000;
 
 .navbar-button:hover {
     background-color: rgb(67, 67, 170);
-    /* background-color: antiquewhite; */
-    /* color: black; */
+    background-color: antiquewhite;
+    background-color: darkcyan;
+    background-color: rgba(255, 255, 255, 0.892);
+    background-color: white;
+    color: black;
+    /* color: red; */
+    /* color: red; */
+    /* transition: 0.15s; */
 }
 
 
-.navbar-button:focus {
+/* .navbar-button:focus {
     background-color: rgb(67, 67, 170);
-}
+} */
 .navbar-button:hover i{
     background-color: rgb(67, 67, 170);
     color: rgb(255, 255, 255);
-    /* background-color: antiquewhite; */
-    /* color: black; */
+    background-color: antiquewhite;
+    background-color: white;
+    color: black;
+    /* color: red; */
 }
 
 .navbar-button:hover span {
     background-color: rgb(67, 67, 170);
-    /* background-color: antiquewhite; */
-    /* color: black; */
+    background-color: antiquewhite;
+    background-color: white;
+    color: black;
+    /* color: red; */
 }
 
 .iconspacing {
     margin: 5%;
-    margin-right: 7%;
+    /* background-color: green; */
+    margin-right: 6%;
+    /* margin: auto 6%; */
     /* background-color: rgb(17, 16, 16); */
 }
 
@@ -216,6 +253,11 @@ background: #000;
 
 .liked:hover {
     background-color: rgb(67, 67, 170);
+    background-color: antiquewhite;
+    background-color: white;
+    color: black;
+    color: red;
+    /* border: 1px solid red; */
     /* font-family: 'Montserrat', serif; */
     font-weight: 520;
     /* text-align: center; */
@@ -239,7 +281,8 @@ font-family: 'Kalam', cursive;
     height: 100%;
     z-index: 3;
     border-bottom: 3px solid rgb(67, 67, 170);
-    /* border-bottom: 3px solid antiquewhite; */
+    border-bottom: 3px solid antiquewhite;
+    border-bottom: 3px solid white;
     /* border-top-left-radius:5px;
     border-top-right-radius: 5px; */
     background-color: rgb(17, 16, 16);
@@ -252,7 +295,8 @@ font-family: 'Kalam', cursive;
 
 .name {
     background-color: rgb(67, 67, 170);
-    /* background-color: antiquewhite; */
+    background-color: rgb(183, 156, 45);
+    background-color: #fff;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -262,7 +306,10 @@ font-family: 'Kalam', cursive;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     color: white;
-    /* color: #000; */
+    color: #000;
+    color: darkblue;
+    color: red;
+    
     font-weight: bolder;
     font-family: 'Marcellus', serif;
 }
@@ -334,6 +381,8 @@ font-family: 'Kalam', cursive;
     /* font-size: 50px; */
     /* color: rgb(103, 255, 43); */
     color: rgb(255, 255, 255);
+    color: antiquewhite;
+    color: white;
     /* visibility: hidden; */
 }
 
@@ -368,11 +417,17 @@ font-family: 'Kalam', cursive;
     font-size: 0.70rem;
     /* font-weight:bold; */
     background-color: rgb(67, 67, 170);
-    /* background-color: antiquewhite; */
-    /* color: black; */
+    background-color: antiquewhite;
+    background-color: rgba(255, 255, 255, 0.892);
+    /* background-color: rgb(202, 41, 41); */
+    color: black;
+    /* color: red; */
+    /* color: white; */
     font-weight: 501;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+    /* color: darkblue; */
+    border-bottom: 3px solid red;
 }
 
 
@@ -390,6 +445,8 @@ font-family: 'Kalam', cursive;
     background-color: rgb(17, 16, 16);
     z-index: 3;
     border-bottom: 3px solid rgb(67, 67, 170);
+    border-bottom: 3px solid antiquewhite;
+    border-bottom: 3px solid white;
 }
 
 .now-playing-info {
@@ -452,6 +509,7 @@ font-family: 'Kalam', cursive;
     right: 0;
     margin: auto 5%;
     background-color: rgb(17, 16, 16);
+    /* background-color: white; */
 }
 
 .covericon i {
@@ -475,6 +533,8 @@ font-family: 'Kalam', cursive;
     /* text-align: center; */
     align-items: center;
     flex-direction: column; 
+    /* background-color: white; */
+    /* color black; */
 }
 
 .footersong {
@@ -486,6 +546,8 @@ font-family: 'Kalam', cursive;
     margin: auto 1%;
     height: 90%;
     /* width: 15vw; */
+    /* background-color: white; */
+    /* color: black; */
 }
 
 .footersong img {
@@ -547,6 +609,8 @@ font-family: 'Kalam', cursive;
     width: 40%;
     background-color: white; 
     accent-color: rgb(67, 67, 170);
+    accent-color: antiquewhite;
+    accent-color: red;
     height: 2px;
     cursor: pointer;
     right: 0;
@@ -554,10 +618,17 @@ font-family: 'Kalam', cursive;
     margin: 4%;
 }
 
-.volume-icon {
+#volumeLogo {
     margin-right: 1px;
     cursor: pointer;
+}
 
+.volumeiconmuted {
+    color: red;;
+}
+
+.volume-icon:hover {
+    color: red;
 }
 
 .timebar {
@@ -577,6 +648,8 @@ font-family: 'Kalam', cursive;
     /* margin: auto 2%; */
     cursor: pointer;
     accent-color: rgb(67, 67, 170);
+    accent-color: antiquewhite;
+    accent-color: red;
     height: 1px;
 }
 
@@ -601,6 +674,7 @@ font-family: 'Kalam', cursive;
 #masterPlay {
     font-size: 2.2rem;
     /* margin-bottom: 1%; */
+    color: red;
 }
 
 #alertBoxDiv {
