--- a/index.css
+++ b/index.css
@@ -3,16 +3,14 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    font-family: 'Marcellus', serif;
     background-color: black;
     color: white;
-    font-size: 0.95rem;
+    font-size: 1rem;
 }
 
 
 i:hover {
-    color: rgb(67, 67, 170);
-    color: antiquewhite;
-    color: white;
     color: red;
 }
 
@@ -30,7 +28,6 @@ background: #000;
 /* ***********HEADER************** */
 .header {
     height: 2vh;
-    background-color: rgb(17, 16, 16);
 }
 
 /* *************BODY SECTION**************** */
@@ -40,7 +37,6 @@ background: #000;
     display:flex;
     margin: auto;
     background-color: rgb(17, 16, 16);
-    /* position: relative; */
 }
 
 /* ********FIRST SECTION************* */
@@ -49,20 +45,17 @@ background: #000;
 .first-section {
     display: flex;
     flex-direction: column;
-    border-bottom: 3px solid rgb(67, 67, 170);
-    border-bottom: 3px solid antiquewhite;
+    background-color: rgb(17, 16, 16);
     border-bottom: 3px solid white;
     width: 18%;
     height: 100%;
     margin-right: 1px;
-    background-color: rgb(17, 16, 16);
+    
 }
 
 .nav-bar {
     display: flex;
-    /* justify-content: center; */
     flex-direction: column;
-    /* background-color: rgb(17, 16, 16); */
     height: 16%;
     color: white;
     border-radius: 7px;
@@ -72,63 +65,33 @@ background: #000;
     position: relative;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
     cursor: pointer;
-    /* border-radius: 7px; */
-    /* border-bottom-left-radius: 3px; */
-    /* border-top-right-radius: 10px; */
     color: white;
     height: 50%;
-    /* margin: 2% 0; */
-    /* margin-bottom: 1%; */
-    /* transition: 0.15s; */
-    /* background-color: transparent; */
 }
 
 #homebutton {
     border-top-right-radius: 10px;
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-    /* font-weight: bold; */
-    /* background-color: green; */
-    /* font-family: 'Varela', sans-serif; */
-    /* font-family: 'Roboto Slab', serif; */
-    /* font-family: 'Preahvihear', sans-serif; */
-    /* font-family: 'Montserrat', sans-serif; */
-    /* font-family: 'Kalam', sans-serif; */
 }
 
 #searchbar {
     border-bottom-right-radius: 10px;
     border: none;
-    /* color: black; */
-}
-
-.backgroundpurple {
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
 }
 
 #search {
-    background-color: rgb(67, 67, 170);
-    /* background-color: white; */
-    color: white;
     height: 90%;
-    /* border-radius: 0.5rem; */
     font-size: 0.85rem;
     padding-left: 1.5rem;
     border: none;
-    background-color: antiquewhite;
     background-color: white;
     color: black;
     font-weight: bolder;
-    font-family: 'Marcellus', serif;
 }
 
 .searchiconclicked {
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
     background-color: white;
-    color: black;
+    color: red;
 }
 
 .hidesearchbar {
@@ -144,43 +107,24 @@ background: #000;
 .searchbariconright {
     position: absolute;
     right: 0;
-    /* transition: 0.50s; */
     cursor: pointer;
-    /* background-color: rgb(67, 67, 170); */
 }
 
 
 .navbar-button:hover {
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
-    background-color: darkcyan;
-    background-color: rgba(255, 255, 255, 0.892);
     background-color: white;
     color: black;
-    /* color: red; */
-    /* color: red; */
-    /* transition: 0.15s; */
 }
 
-
-/* .navbar-button:focus {
-    background-color: rgb(67, 67, 170);
-} */
 .navbar-button:hover i{
-    background-color: rgb(67, 67, 170);
-    color: rgb(255, 255, 255);
-    background-color: antiquewhite;
     background-color: white;
     color: black;
-    /* color: red; */
 }
 
 .navbar-button:hover span {
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
     background-color: white;
     color: black;
-    /* color: red; */
+    color: red;
 }
 
 .iconspacing {
@@ -428,6 +372,11 @@ font-family: 'Kalam', cursive;
     border-bottom-right-radius: 3px;
     /* color: darkblue; */
     border-bottom: 3px solid red;
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto Slab', serif;
+    font-family: 'Varela', sans-serif;
+    font-family: 'Preahvihear', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
 }
 
 
@@ -454,7 +403,9 @@ font-family: 'Kalam', cursive;
     height: 16%;
     width: 100%;
     /* background-color: rgb(17, 16, 16); */
+    /* background-color: white; */
     color: white;
+    /* color: black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -714,11 +665,14 @@ font-family: 'Kalam', cursive;
     background-color: grey;
     background-color: rgb(140, 0, 255);
     background-color: rgb(67, 67, 170);
+    background-color: white;
+    color: red;
 	border-radius: 10px;
 	padding: 1rem;
 	z-index: 4;
 	/* text-align: center; */
 	color: black;
+    color: red;
     transition: 0.15s;
     /* display: flex;
     flex-direction: column; */
@@ -727,6 +681,7 @@ font-family: 'Kalam', cursive;
     width: 30%;
     /* height: 10%; */
     border: 2px solid rgb(30, 241, 30);
+    border: 2px solid red;
     /* padding-bottom: 2%; */
 }
 
@@ -746,6 +701,7 @@ font-family: 'Kalam', cursive;
     background-color: grey;
     background-color: rgb(140, 0, 255);
     background-color: rgb(67, 67, 170);
+    background-color: red;
     /* display: flex; */
     justify-content: center;
     /* align-items: center; */
@@ -766,21 +722,25 @@ font-family: 'Kalam', cursive;
     /* text-align: center; */
     width: 100%;
     /* margin-top: 1%; */
-    border-radius: 0.4rem;
+    /* border-radius: 0.4rem; */
     font-weight: bolder;
     /* margin-right: 2%; */
     height: 2.3rem;
     border: 1px solid rgb(30, 241, 30);
+    border: 1px solid red;
+    /* background-color: red; */
 }
 
 .textMsgName {
     background-color: rgb(17, 16, 16);
     /* background-color: rgb(67, 67, 170); */
     background-color: transparent;
+    color: red;
     font-size: 0.9rem;
     border-radius: 0.2rem;
     font-family: 'Marcellus', serif;
     padding: 1%;
+    font-weight: bolder;
     /* height: 2rem; */
 }
 
@@ -814,6 +774,7 @@ font-family: 'Kalam', cursive;
     background-color: transparent;
     background-color: rgb(30, 241, 30);
     background-color: rgb(67, 67, 170);
+    background-color: red;
     /* color: rgb(30, 241, 30); */
     /* color: green; */
     /* color: rgb(67, 67, 170); */
@@ -833,7 +794,7 @@ font-family: 'Kalam', cursive;
     text-align: center;
     /* width: 25%; */
     padding: 1%;
-    border-radius: 0.4rem;
+    /* border-radius: 0.4rem; */
     width: 15%;
     /* position: absolute; */
     /* background-color: #000; */
