--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ background: #000;
 #navbar {
     display: flex;
     flex-direction: column;
-    height: 16%;
+    height: 20%;
     color: white;
     border-radius: 7px;
 }
@@ -69,6 +69,17 @@ background: #000;
 
 #homeButton {
     border-top-right-radius: 10px;
+    /* background-color: red;
+    color: #000; */
+    background-color: grey;
+}
+
+#homeButton i {
+    background-color: grey;
+}
+
+#homeButtonName {
+    background-color: grey;
 }
 
 #searchbar {
@@ -327,9 +338,13 @@ background: #000;
 }
 
 .now-playing-info {
-    border-radius: 7px;
-    height: 16%;
+    border-top-left-radius: 10px;
+    /* border-radius: 7px; */
+    height: 10%;
+    background-color: white;
+    background-color: grey;
     width: 100%;
+    color: black;
     color: white;
     display: flex;
     justify-content: center;
