--- a/index.css
+++ b/index.css
@@ -44,18 +44,39 @@ background: #000;
     display: flex;
     flex-direction: column;
     background-color: rgb(17, 16, 16);
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid #870d19;
     width: 18%;
     height: 100%;
     margin-right: 1px;   
 }
 
+.heading {
+    border-top-right-radius: 10px;
+    /* border-radius: 7px; */
+    height: 10%;
+    /* background-color: white;
+    background-color: grey;
+    background-color: rgb(56, 55, 55);
+    background-color: #dc3545;
+    background-color: #870d19; */
+    width: 100%;
+    color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Kalam', cursive;
+    font-size: 1.3rem;
+}
+
 #navbar {
     display: flex;
     flex-direction: column;
-    height: 20%;
+    height: 16%;
     color: white;
     border-radius: 7px;
+    margin-top: 4%;
 }
 
 .navbar-button {
@@ -65,22 +86,19 @@ background: #000;
     cursor: pointer;
     color: white;
     height: 50%;
+    /* background-color: rgb(56, 55, 55); */
+}
+
+.navbar-button span {
+    font-family: 'Marcellus', serif;
+    font-weight: lighter;
+    /* background-color: rgb(56, 55, 55); */
 }
 
 #homeButton {
-    border-top-right-radius: 10px;
-    /* background-color: red;
-    color: #000; */
-    background-color: grey;
+    border-top-right-radius: 7px;
 }
 
-#homeButton i {
-    background-color: grey;
-}
-
-#homeButtonName {
-    background-color: grey;
-}
 
 #searchbar {
     border-bottom-right-radius: 10px;
@@ -123,20 +141,29 @@ background: #000;
     color: black;
 }
 
+#homeButton:hover {
+    background-color: white;
+    color: black;
+}
+
 .navbar-button:hover i{
     background-color: white;
     color: red;
 }
 
 .navbar-button:hover span {
+    /* background-color: white;
+    color: red; */
     background-color: white;
     color: red;
+    font-weight: 520;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Kalam', cursive;
+    /* transition: 0.15s; */
+    font-size: 1.05rem;
 }
 
-.navbar-button:hover #homeButton {
-    background-color: white;
-    color: red;
-}
 .iconspacing {
     margin: 5%;
     margin-right: 6%;
@@ -145,7 +172,7 @@ background: #000;
 .playlist {
     display: flex;
     flex-direction: column;
-    margin-top: 10%;
+    margin-top: 5%;
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
@@ -338,15 +365,20 @@ background: #000;
     position: relative;
     margin: auto 1px;
     z-index: 3;
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid #870d19;
+    /* background-color: rgb(56, 55, 55); */
+    background-color: rgb(17, 16, 16);
 }
 
 .now-playing-info {
     border-top-left-radius: 10px;
     /* border-radius: 7px; */
     height: 10%;
-    background-color: white;
+    /* background-color: white;
     background-color: grey;
+    background-color: rgb(56, 55, 55);
+    background-color: #dc3545;
+    background-color: #870d19; */
     width: 100%;
     color: black;
     color: white;
